Change caret color on light theme
Change caret color from white to --darkt because on active state  white color caret  is not visible enough  on light theme.

--- a/css/contributors.css
+++ b/css/contributors.css
@@ -119,7 +119,8 @@ body{
     color:#eee;
     width:20rem;
     accent-color:var(--lightt);
-    box-shadow:none
+    box-shadow:none;
+    caret-color: var(--darkt);
 }
 @media (max-width:768px){
     .form-control,.form-control:focus,.from-control:active{
