updated the styling of the nav-bar

--- a/css/contributors.css
+++ b/css/contributors.css
@@ -17,7 +17,7 @@
     --text:rgb(242, 244, 251);
     --box:rgb(61 62 73);
     --box-hover:rgb(57 148 255);
-    --nav-color:#1e1e28;
+    --nav-color:rgb(65, 45, 45);
     --footer-color:#ededed;
     --container-text:#ffb3c6
 }
