Fix search bar text in light color
fixes fineanmol/Hacktoberfest2022#2207

--- a/css/contributors.css
+++ b/css/contributors.css
@@ -153,6 +153,7 @@ input:-webkit-autofill:active {
 .light .form-control {
   background-color: #fff;
   border-color: #eee;
+  color: #000;
   outline: 0;
   box-shadow: none;
 }
