--- a/css/navbar.css
+++ b/css/navbar.css
@@ -26,7 +26,7 @@ nav{
   background-color:#f1ffc5
 }
 .navbar-light .navbar-nav .active>.nav-link{
-  color:#df271a;
+  color:#4c3533;
   font-weight:700
 }
 .navbar-light .navbar-nav .nav-link::before{
